--- a/challenge_foraging/challenge_foraging_robot.ipynb
+++ b/challenge_foraging/challenge_foraging_robot.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The robot collected 2.33kg of apples\n"
+      "The robot collected 3.10kg of apples\n"
      ]
     }
    ],
@@ -109,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The robot collected 4.56kg of apples\n"
+      "The robot collected 4.80kg of apples\n"
      ]
     }
    ],
@@ -145,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After 100 iterations, the mean yield from this tree was: 4.94kg\n",
+      "After 100 iterations, the mean yield from this tree was: 4.91kg\n",
       "All tests passed\n"
      ]
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -393,14 +393,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<scenario.forage_bot.BerryBush object at 0x16c2eb500>\n"
+      "<scenario.forage_bot.BerryBush object at 0x134fd4770>\n"
      ]
     }
    ],
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -484,14 +484,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The robot collected 1.84kg of berries\n"
+      "The robot collected 1.99kg of berries\n"
      ]
     }
    ],
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -785,9 +785,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is day 0\n",
+      "It is day 1\n",
+      "It is day 2\n"
+     ]
+    }
+   ],
    "source": [
     "ForageBot.reset_days()\n",
     "forageBot = ForageBot()\n",
@@ -812,9 +822,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[('apples', 5.141658432216612, 3)]\n",
+      "[('apples', 5.141658432216612, 2), ('apples', 2.1147696543084056, 3)]\n",
+      "[('apples', 5.141658432216612, 1), ('apples', 2.1147696543084056, 2), ('berries', 2.7939057597639247, 3)]\n",
+      "[('apples', 2.1147696543084056, 1), ('berries', 2.7939057597639247, 2), ('berries', 1.616547619529872, 3)]\n"
+     ]
+    }
+   ],
    "source": [
     "forageBot = ForageBot()\n",
     "print(forageBot.inventory)\n",
@@ -841,9 +863,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You earned €3.12 from selling your inventory. Your total is now €3.12\n",
+      "You earned €24.66 from selling your inventory. Your total is now €27.78\n"
+     ]
+    }
+   ],
    "source": [
     "forageBot = ForageBot()\n",
     "forageBot.forage(ForageBot.pre_survey['tree_one'])\n",
@@ -874,14 +905,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total money earned: €107268.16\n"
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[46], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m total_earned \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Find optimal trees and bushes for first 400 actions\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m contextlib\u001b[38;5;241m.\u001b[39mredirect_stdout(f):\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m total_actions \u001b[38;5;241m<\u001b[39m EXPLORATION_ACTIONS:\n\u001b[1;32m     20\u001b[0m         obj \u001b[38;5;241m=\u001b[39m forageBot\u001b[38;5;241m.\u001b[39mexplore()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
      ]
     }
    ],
