--- a/challenge_foraging/challenge_foraging_robot.ipynb
+++ b/challenge_foraging/challenge_foraging_robot.ipynb
@@ -926,6 +926,7 @@
     "ForageBot.reset_days(limit=5000)\n",
     "forageBot = ForageBot()\n",
     "np.random.seed(42)\n",
+    "f = io.StringIO()\n",
     "\n",
     "# Set up variables\n",
     "discovered_trees = []\n",
