--- a/challenge_foraging/challenge_foraging_robot.ipynb
+++ b/challenge_foraging/challenge_foraging_robot.ipynb
@@ -905,18 +905,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'f' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[46], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m total_earned \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Find optimal trees and bushes for first 400 actions\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m contextlib\u001b[38;5;241m.\u001b[39mredirect_stdout(f):\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m total_actions \u001b[38;5;241m<\u001b[39m EXPLORATION_ACTIONS:\n\u001b[1;32m     20\u001b[0m         obj \u001b[38;5;241m=\u001b[39m forageBot\u001b[38;5;241m.\u001b[39mexplore()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total money earned: €107268.16\n"
      ]
     }
    ],
@@ -926,6 +922,8 @@
     "ForageBot.reset_days(limit=5000)\n",
     "forageBot = ForageBot()\n",
     "np.random.seed(42)\n",
+    "\n",
+    "f = io.StringIO()\n",
     "\n",
     "# Set up variables\n",
     "discovered_trees = []\n",
